Apply official patch #28
From Usenet article 'perl 1.0 patch #28' dated 5 Mar 88 03:43:55 GMT
on comp.sources.bugs

Subject: added ability to kill process groups
Subject: removed spurious debugging print statement from s2p
Subject: grandfathering of \digit STILL didn't work
Subject: io.fs test complains if ./tmp already exists

Description:
	Perl already had a kill function.  Now you can kill process groups
	as well by specifying a negative signal number.

	There was a leftover print statement in s2p that printed out some
	debugging information.  This has been deleted.

	Substitution of subpatterns is normally done via \digit in other
	programs, though perl prefers to use $digit.  I've "fixed" the support
	for \digit several times now.  This time I actually tested it!

	The io.fs test creates a subdirectory, and unfortunately didn't
	expect that it might already be there.

--- a/perl.man.2
+++ b/perl.man.2
@@ -1,7 +1,10 @@
 ''' Beginning of part 2
-''' $Header: perl.man.2,v 1.0.1.7 88/03/02 12:36:57 root Exp $
+''' $Header: perl.man.2,v 1.0.1.8 88/03/04 19:11:44 root Exp $
 '''
 ''' $Log:	perl.man.2,v $
+''' Revision 1.0.1.8  88/03/04  19:11:44  root
+''' patch28: documented killing of process groups
+''' 
 ''' Revision 1.0.1.7  88/03/02  12:36:57  root
 ''' patch24: documented symlink()
 ''' 
@@ -84,6 +87,9 @@ Note: in order to use the value you must put the whole thing in parentheses:
 	$cnt = (kill 9,$child1,$child2);
 
 .fi
+If the signal is negative, kills process groups instead of processes.
+(On System V, a negative \fIprocess\fR number will also kill process groups,
+but that's not portable.)
 .Ip "last LABEL" 8 8
 .Ip "last" 8
 The
