--- a/README
+++ b/README
@@ -1,3 +1,9 @@
+# This repository by clone
+
+This repository deleted due to account deletion.
+I forked it to use it again.
+
+
 Renovation of Perl 1.0
 ======================
 
